--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,8 @@ spring.datasource.password=123456
 ## Mybatis ≈‰÷√
 mybatis.typeAliasesPackage=com.example.couplet
 mybatis.mapperLocations=classpath:mapper/*.xml
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+
 
 multipart.maxFileSize = -1
 multipart.maxRequestSize=-1
@@ -33,6 +31,7 @@ spring.thymeleaf.mode=LEGACYHTML5
 
 spring.cache.ehcache.config=ehcache.xml
 ## LOG4J≈‰÷√
+logging.level.com.spring.jiminshiro.mapper=debug 
 log4j.rootCategory=DEBUG,stdout
 ## øÿ÷∆Ã® ‰≥ˆ
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
